# VSecureTransfer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
apps/: receiver_main.cpp  sender_main.cpp
docs/: HANDOFF.md
include/vsecure/: crypto.hpp  endian.hpp  event_journal.hpp  metadata.hpp  modules_tz.hpp  packet.hpp  protocol.hpp  receiver_run.hpp  replay.hpp  sender_run.hpp  tcp.hpp  types.hpp  wire_format.hpp
scripts/: coverage.sh  gen_keys.sh  pick_build.sh  qa_full.sh  resend_framed.py  run_all_tests.sh  test_disconnect_midbody.sh  test_large_roundtrip.sh  test_localhost_hostname.sh  test_negative_garbage.sh  test_readonly_outdir.sh  test_replay_packet.sh  test_roundtrip.sh  test_sender_missing_file.sh  test_wrong_sender_pubkey.sh
src/: crypto.cpp  event_journal.cpp  metadata.cpp  modules_tz.cpp  packet.cpp  receiver_run.cpp  replay.cpp  sender_run.cpp  tcp.cpp
tests/: test_integrity.cpp  test_metadata.cpp  test_packet.cpp  test_replay.cpp  test_signing_blob.cpp
